# Blizzard-Updater

./: .gitignore  Read Me.txt  createInstaller.bat  readme.md  rules.txt
Assemble/: GenerateExe.bat
MPQ/: delete.lst  hdfiles.lst  lichkingonly.lst  patch.lst
MPQ/InstallCD/Unpack/: Localization.xml
MPQ/InstallCD/Unpack/InstallLogTemplate/: BaseHeader.html  EntryStartToTitle.html
MPQ/base/DBFilesClient/: CharBaseInfo.dbc  CharTitles.dbc  ChrRaces.dbc  Item.dbc  ItemSet.dbc  ItemSubClass.dbc  ItemSubClassMask.dbc  Startup_Strings.dbc
MPQ/base/Interface/FrameXML/: AGC.lua  ActionBarFrame.xml  ActionButton.lua  ActionButtonTemplate.xml  AlertFrames.lua  AlertFrames.xml  AlternatePowerBar.lua  AlternatePowerBar.xml  AnimTimerFrame.xml  AnimationSystem.lua  ArenaFrame.lua  ArenaFrame.xml  ArenaRegistrarFrame.lua  ArenaRegistrarFrame.xml  AudioOptionsFrame.lua  AudioOptionsFrame.xml  AudioOptionsPanels.lua  AudioOptionsPanels.xml  AutoComplete.lua  AutoComplete.xml  BNConversations.lua  BNConversations.xml  BNet.lua  BNet.xml  BankFrame.lua  BankFrame.xml  BasicControls.xml  BattlefieldFrame.lua  BattlefieldFrame.xml  Bindings.xml  Blizzard_ItemAlterationUI.lua  Blizzard_ItemAlterationUI.xml  BonusActionBarFrame.lua  BonusActionBarFrame.xml  BuffFrame.lua  BuffFrame.xml  CastingBarFrame.lua  CastingBarFrame.xml  ChannelFrame.lua  ChannelFrame.xml  (+252 more)
MPQ/base/Interface/GlueXML/: AccountLogin.lua  AccountLogin.xml  AddonList.lua  AddonList.xml  AudioOptionsFrame.lua  AudioOptionsFrame.xml  AudioOptionsPanels.lua  AudioOptionsPanels.xml  CharacterCreate.lua  CharacterCreate.xml  CharacterSelect.lua  CharacterSelect.xml  CreditsFrame.lua  CreditsFrame.xml  GlueBasicControls.xml  GlueButtons.lua  GlueButtons.xml  GlueDialog.lua  GlueDialog.xml  GlueDropDownMenu.lua  GlueDropDownMenu.xml  GlueDropDownMenuTemplates.xml  GlueFontStyles.xml  GlueFonts.xml  GlueLocalization.lua  GlueLocalization.xml  GlueLocalizationPost.lua  GlueLocalizationPost.xml  GlueParent.lua  GlueParent.xml  GlueSplash.xml  (+29 more)
res/data/: Patch.html  Patch.txt  expansiononly.lst  patch.cmd  ptrfiles.lst
src/: CMakeLists.txt  append_bsni.cpp  bsni.hpp  extract_bsni.cpp  file.hpp  headergenerator.cpp  listgenerator.cpp  listruleset.hpp  mpqcreate.cpp  util.hpp  zlib.cpp  zlib.hpp
(+7 files in other folders)
